chore: fixed overflow

--- a/app/assets/base.scss
+++ b/app/assets/base.scss
@@ -174,7 +174,7 @@ div.footer {
     &[display=true] {
         display: block;
         width: 100%;
-        overflow-x: scroll;
+        overflow-x: auto;
 
         & svg {
             width: 100%;
